--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "ejs": "*",
     "mongodb": "*",
     "mocha": "*",
-    "should": "*"
+    "should": "*",
+    "database-cleaner": "*"
   },
   "engines": {
     "node": "0.8.x",
