added bcrypt dep and wrote encryptPassword; indirectly finished testing create_user (test is in setup for other tests)

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "mongodb": "*",
     "mocha": "*",
     "should": "*",
-    "database-cleaner": "*"
+    "database-cleaner": "*",
+    "bcrypt": "*"
   },
   "engines": {
     "node": "0.8.x",
