tdd to bdd; rewrote auth; added getuser, getuserbyid; rewrote encrypt, salt; added passport logic;
changed testing style from tdd to bdd. commented out all old tests, got db suite passing again.
added some utility db access functions, getuser and getuserbyid used for the passport auth logic.
rewrote encryption and salt routines to be ansynchronous. sync code was the problem previously.
added some logic from passport auth library example to handle login and sessions.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "mocha": "*",
     "should": "*",
     "database-cleaner": "*",
-    "bcrypt": "*"
+    "bcrypt": "*",
+    "passport": "*"
   },
   "engines": {
     "node": "0.8.x",
