--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "passport": "*",
     "passport-local": "*",
     "connect-flash": "*",
-    "kue"
+    "kue": "*",
+    "request": "*",
+    "redis": "*"
   },
   "engines": {
     "node": "0.8.x",
